--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1,54 +1,156 @@
 /* Import Font */
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&display=swap");
 
+* {
+  font-family: "Nunito", sans-serif;
+}
+
+body {
+  background-color: #ccd9ff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
 header {
   text-align: center;
-  margin-bottom: 1rem;
 }
-*{
-    font-family: "Nunito", sans-serif;    
-}
+
 header h1 {
   font-family: "Nunito", sans-serif;
   font-weight: bold;
 }
-body{
-    background-color: #ecf1ff;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-h2{
-    font-family: "Nunito", sans-serif;
-    font-weight: bold;
-    color: #145364;
-}
+
 .container {
   display: flex;
+  background-color: white;
+  padding: 10px;
+  width: 300px;
   flex-direction: column;
   align-items: center;
-  padding: 20px;
-
-  width: auto;
-  height: auto;
-
+  font-family: "Nunito", sans-serif;
   background: rgba(255, 255, 255, 0.4);
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
 }
-.inputan {
+
+.input-kode-voucher {
   display: flex;
-  background-color: white;
-  padding: 10px;
-  width: auto;
   flex-direction: column;
-  align-items: center;
-  font-family: "Nunito", sans-serif;
 }
-.footer{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+
+.input {
+  text-align: center;
+  background: #ffffff;
+  border-radius: 10px;
+  border: none;
+  margin-bottom: 6px;
+  height: 42px;
+}
+
+.button {
+  color: white;
+  font-weight: bold;
+  height: 47px;
+  background: #263238;
+  border-radius: 10px;
+  border: none;
+}
+
+.salin {
+  color: white;
+  font-weight: bold;
+  height: 47px;
+  width: 80px;
+  background: #263238;
+  border-radius: 10px;
+  border: none;
+}
+
+.output-hasil {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.output {
+  width: 200px;
+  text-align: center;
+  background: #ffffff;
+  border-radius: 10px;
+  border: none;
+  margin-bottom: 6px;
+  height: 42px;
+}
+
+.footer {
+  text-align: center;
+}
+sub {
+  font-weight: bold;
+}
+
+.tooltip {
+  position: relative;
+  display: inline-block;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 140px;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px;
+  position: absolute;
+  z-index: 1;
+  bottom: 150%;
+  left: 50%;
+  margin-left: -75px;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.tooltip .tooltiptext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+  opacity: 1;
+}
+
+.multi-action {
+  display: inline-block;
+  position: absolute;
+  width: 56px;
+  height: 56px;
+  bottom: 36px;
+  right: 36px;
+}
+
+.action-button {
+  position: absolute;
+  width: 56px;
+  height: 56px;
+  border-radius: 50%;
+  border: 0;
+  outline: 0;
+  background: #f44336;
+  font-size: 24px;
+  color: white;
+  z-index: 2;
+  box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.16), 0 2px 5px 0 rgba(0, 0, 0, 0.26);
+  transition: all 0.3s;
+}
+.action-button:hover {
+  background: blue;
 }
