--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1,12 +1,11 @@
 /* Import Font */
-@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 * {
-  font-family: "Nunito", sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 body {
-  background-color: #ccd9ff;
+  background-color: #5076D9;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -29,9 +28,13 @@ header h1 {
   flex-direction: column;
   align-items: center;
   font-family: "Nunito", sans-serif;
-  background: rgba(255, 255, 255, 0.4);
+  background: rgba(255, 255, 255, 0.7);
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
+}
+h3{
+  font-size: 16px;
+  color: #145364;
 }
 
 .input-dan-pilih-provider{
@@ -91,6 +94,7 @@ header h1 {
 }
 
 .output-hasil {
+  margin-top: 10px;
   align-items: center;
   display: flex;
   flex-direction: column;
@@ -103,14 +107,25 @@ header h1 {
   border-radius: 10px;
   border: none;
   margin-bottom: 6px;
-  height: 42px;
+  height: 47px;
 }
 
 .footer {
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   text-align: center;
 }
+.footer p{
+  margin-bottom: -3px;
+  font-size: 12px;
+}
 sub {
-  font-weight: bold;
+  color: white;
+  align-text: center;
+  font-weight:thin;
 }
 
 .tooltip {
