--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -50,7 +50,7 @@ h3{
 }
 .dropdown {
   text-align: center;
-  width: 200px;
+  width: 220px;
   text-align: center;
   background: #ffffff;
   border-radius: 10px;
@@ -124,7 +124,8 @@ h3{
 }
 sub {
   color: white;
-  align-text: center;
+  text-align: center;
+  align-items: center;
   font-weight:thin;
 }
 
