--- a/components/styles/style.css
+++ b/components/styles/style.css
@@ -73,6 +73,7 @@ h3 {
   border-radius: 10px;
   border: none;
   height: 47px;
+  width: 150%;
 }
 
 .button {
@@ -205,5 +206,30 @@ sub {
 }
 button.salin:hover {
   background: blue;
+  scale: 0.95;
   transition: all 0.3s;
+}
+button.salin:active {
+  background: black;
+  scale: 1;
+  transition: all 0.3s;
+}
+
+.button:hover {
+  background: blue;
+  scale: 0.95;
+  background: blue;
+  transition: all 0.5s;
+}
+
+.button:active {
+  background: black;
+  scale: 1;
+  transition: all 0.5s;
+}
+
+.dropdown:hover {
+  border: 2px solid #000FFF;
+  scale: 0.95;
+  transition: all 0.5s;
 }
